--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -71,7 +71,7 @@
             </div>
 
         </div>
-        <footer> <p>Criado por <a href="https://github.com/Jadsonl" target="_blank">Jadson Santana</a> </p>
+        <footer>As informações do site não são reais. Apenas para praticas de estudos.</p>
       </footer>
     </div>
     
