--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             </div>
 
         </div>
-        <footer>As informações do site não são reais. Apenas para praticas de estudos.</p>
+        <footer>
+          <p> As informações do site não são reais. Apenas para praticas de estudos.</p>
       </footer>
     </div>
     
